# minesweeper

./: README.md  pyproject.toml
minesweeper/: Config.py  main.py  utils.py
minesweeper/game_objects/: Counter.py  Grid.py  Menu.py  Tile.py  UI.py
minesweeper/settings/: Config.py  Difficulties.py
src/: GameObjects.py  GameStatus.py  TileType.py  main.py  utils.py
src/game_objects/: Grid.py  Tile.py  UI.py
tests/: test_grid.py
