[tool.poetry]
name = "minesweeper"
version = "0.1.0"
description = "Minesweeper in Python"
authors = ["Your Name <you@example.com>"]
license = "GNU GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
